# 5s-TES-notebooks

./: .gitignore  README.md  pyproject.toml
OMOP-metadata/: OMOP metadata visualisations.ipynb  README.md  bunny_utils.py  pyproject.toml
OMOP-metadata/.ipynb_checkpoints/: OMOP metadata visualisations-checkpoint.ipynb
OMOP-metadata/bunny-synthetic-data/: delphi-tre-1.json  delphi-tre-2.json
contingency-tables/: Aggregating for contingency tables.ipynb  README.md  contingency_table_utils.py  pyproject.toml
contingency-tables/data/: tre1.json  tre2.json
descriptive-stats/: README.md  aggregate_utils.py  aggregating-basic-statistics.ipynb  pyproject.toml
descriptive-stats/data/: variance-tre-1.json  variance-tre-2.json
descriptive-stats/tests/: test_variance.py
lung-cancer/: lung-cancer-notebook.ipynb  pyproject.toml
lung-cancer/data/: nottingham-tre-1.json
workbench-delphi/: Workbench Delphi 100k.ipynb  main.py  pyproject.toml
workbench-delphi/.ipynb_checkpoints/: Workbench Delphi 100k-checkpoint.ipynb  config-checkpoint.yml  pyproject-checkpoint.toml
workbench-delphi/data/: neoplasm-systol-tre1.csv  neoplasm-systol-tre2.csv
