[project]
name = "5s-tes-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "scipy>=1.17.1",
]

[tool.uv.workspace]
members = [
    "OMOP-metadata",
]
