[project]
name = "5s-tes-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "five-safes-tes-workbench>=0.2.4",
    "scipy>=1.17.1",
    "partialstats",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
]

[tool.uv.workspace]
members = [
    "OMOP-metadata",
    "descriptive-stats",
    "lung-cancer",
    "workbench-delphi",
    "contingency-tables",
]

[tool.uv.sources]
partialstats = { git = "https://github.com/Health-Informatics-UoN/partialstats/" }
